--- a/프로젝트 소개서.md
+++ b/프로젝트 소개서.md
@@ -1,2 +1,6 @@
 # food_market 팀 프로젝트
-## 실제 프로젝트 github 주소 : https://github.com/honey-banana/food_market_my
+- 실제 프로젝트 github 주소 : https://github.com/honey-banana/food_market_my
+- 프로젝트 호스팅 주소 : https://itwillbs14.cafe24.com/food_market
+## 프로젝트 목표
+Spring Framework를 기반으로한 웹 페이지 구축
+
