--- a/프로젝트 소개서.md
+++ b/프로젝트 소개서.md
@@ -20,7 +20,8 @@
 
 #### 회원관리
 - 회원가입 : ajax를 활용한 정규표현식 확인 및 중복체크, 이메일 
-
+<pre>
+<code>
 	var idJ = /^[a-z0-9][a-z0-9_\-]{3,19}$/;
 	var pwJ = /^[A-Za-z0-9]{4,12}$/;
 	var pw2J = /^[A-Za-z0-9]{4,12}$/;
@@ -116,6 +117,6 @@
 			});
 		}
 	}
-
-
+</code>
+</pre>
   
