--- a/프로젝트 소개서.md
+++ b/프로젝트 소개서.md
@@ -17,6 +17,7 @@
 - 상품관리 : 상품등록/수정/삭제, 상품 리뷰/문의 
 - 결제 : 장바구니, 주문결제
 - 관리자 : 구글 차트, 회원/상품/문의 내역 출력
+- 기타 : 페이징 
    
 #### 회원관리
 - 회원가입 : ajax를 활용한 정규표현식 확인 및 중복체크, 이메일  및 다음 주소 api 
@@ -129,6 +130,9 @@ function eCheck() {
 String uploadPath = mRequest.getSession().getServletContext().getRealPath("/resources/pd_img_upload/"+ProductVO.getPd_category()+"/");
 
 </code></pre>
+   
+#### 기타
+- 페이징 처리 : 
 
 
 
