--- a/프로젝트 소개서.md
+++ b/프로젝트 소개서.md
@@ -17,10 +17,13 @@
 - 상품관리 : 상품등록/수정/삭제, 상품 리뷰/문의 
 - 결제 : 장바구니, 주문결제
 - 관리자 : 구글 차트, 회원/상품/문의 내역 출력
-- 기타 : 페이징 
+- 기타 : 페이징 처리
    
+### 담당 파트 : 회원관리 / 관리자   
+
 #### 회원관리
-- 회원가입 : ajax를 활용한 정규표현식 확인 및 중복체크, 이메일  및 다음 주소 api 
+- 회원가입 : ajax를 활용한 정규표현식 확인 및 중복체크, 이메일  및 다음 주소 api
+    + 정규표현식
 <pre><code>
 var idJ = /^[a-z0-9][a-z0-9_\-]{3,19}$/;
 var pwJ = /^[A-Za-z0-9]{4,12}$/;
@@ -81,6 +84,10 @@ var inval_Arr = new Array(8).fill(false);
 		$('#mb_id').focus();
 		return false;
 	}
+</code></pre>
+
+    + 정규표현식
+<pre><code>
 // 이메일 발송
 function eCheck() {
 	if($('#mb_email').val()==''){
@@ -117,12 +124,29 @@ function eCheck() {
 		});
 	}
 }
+// mail bean 설정
+<bean id="mailSender"
+	class="org.springframework.mail.javamail.JavaMailSenderImpl">
+	<property name="host" value="smtp.gmail.com" />
+	<property name="port" value="587" />
+	<property name="username" value="mskyun721@gmail.com" />
+	<property name="password" value="<!-- 2차 앱 비밀번호 -->" /> 
+	<property name="javaMailProperties">
+		<props>
+			<prop key="mail.transport.protocol">smtp</prop>
+			<prop key="mail.smtp.auth">true</prop>
+			<prop key="mail.smtp.starttls.enable">true</prop>
+			<prop key="mail.debug">true</prop>
+		</props>
+	</property>
+</bean>
 </code></pre>
 - 로그인/로그아웃 : MemberController와 MemberService에서 session을 사용하여 로그인/로그아웃 제어
    
 #### 상품 관리
 - 상품 등록 : 파일 업로드
 <pre><code>
+// 파일 업로드 bean 설정
 <beans:bean id="multipartResolver" class="org.springframework.web.multipart.commons.CommonsMultipartResolver">
 	<beans:property name="maxUploadSize" value="10485760" /><!-- 최대 업로드 사이즈 10MB  -->
 </beans:bean>
