--- a/프로젝트 소개서.md
+++ b/프로젝트 소개서.md
@@ -22,7 +22,7 @@
 ### 담당 파트 : 회원관리 / 관리자   
 
 #### 회원관리
-- 회원가입 : ajax를 활용한 정규표현식 확인 및 중복체크, 이메일  및 다음 주소 api
+- 회원가입 : ajax를 활용한 정규표현식 확인 및 중복체크, 이메일 및 다음 주소 api
   + 정규표현식
 <pre><code>
 var idJ = /^[a-z0-9][a-z0-9_\-]{3,19}$/;
@@ -85,6 +85,7 @@ var inval_Arr = new Array(8).fill(false);
 		return false;
 	}
 </code></pre>
+
   + 이메일
 <pre><code>
 // 이메일 발송
@@ -123,39 +124,134 @@ function eCheck() {
 		});
 	}
 }
-// mail bean 설정
-<bean id="mailSender"
-	class="org.springframework.mail.javamail.JavaMailSenderImpl">
-	<property name="host" value="smtp.gmail.com" />
-	<property name="port" value="587" />
-	<property name="username" value="mskyun721@gmail.com" />
-	<property name="password" value="<!-- 2차 앱 비밀번호 -->" /> 
-	<property name="javaMailProperties">
-		<props>
-			<prop key="mail.transport.protocol">smtp</prop>
-			<prop key="mail.smtp.auth">true</prop>
-			<prop key="mail.smtp.starttls.enable">true</prop>
-			<prop key="mail.debug">true</prop>
-		</props>
-	</property>
-</bean>
 </code></pre>
 - 로그인/로그아웃 : MemberController와 MemberService에서 session을 사용하여 로그인/로그아웃 제어
    
 #### 상품 관리
-- 상품 등록 : 파일 업로드
+- 상품 등록 : FileUtils.java 파일을 업로드
 <pre><code>
-// 파일 업로드 bean 설정
-<beans:bean id="multipartResolver" class="org.springframework.web.multipart.commons.CommonsMultipartResolver">
-	<beans:property name="maxUploadSize" value="10485760" /><!-- 최대 업로드 사이즈 10MB  -->
-</beans:bean>
+public List<FileVO> FileUpload(FileVO fileVO, HttpServletRequest request,String path) throws Exception {
+	// HttpServletRequest에서 파일을 담을 수 없기 때문에 MultiparHttpServletRequest를 사용한다. form에서 값을 받아 오는 역할
+	MultipartHttpServletRequest multipartHttpServletRequest = (MultipartHttpServletRequest) request;
 
-String uploadPath = mRequest.getSession().getServletContext().getRealPath("/resources/pd_img_upload/"+ProductVO.getPd_category()+"/");
+	// Iterator : 모든 컬랙션 클래스의 데이터를 읽을때 사용. 
+	// JSP의 <form>태그 내의 <input> 태그의 name속성의 값을 몰라도 모든 데이터를 가지고 올 수 있다.
+	Iterator<String> iterator = multipartHttpServletRequest.getFileNames();
 
+	MultipartFile multipartFile = null;
+	String originFileName = null;
+	String storedFileName = null;
+
+	// 다중 파일을 전송할때 사용
+	List<FileVO> list = new ArrayList<FileVO>();
+
+	// 파일 저장 경로에 해당 폴더가 없을 경우 폴더 생성
+	File file = new File(path);
+	if (file.exists() == false) {
+		file.mkdirs();
+	}
+
+	while (iterator.hasNext()) {
+		multipartFile = multipartHttpServletRequest.getFile(iterator.next());
+		originFileName = multipartFile.getOriginalFilename();
+		storedFileName = originFileName;
+
+		if (multipartFile.isEmpty() == false) {
+			if (new File(path + storedFileName).exists()) {
+				//.기준으로 자르기 
+				int dotIndex = storedFileName.lastIndexOf('.');
+				//파일 이름 바꾸기
+				String newStoredFileName = storedFileName.substring(0,dotIndex)+"_"+System.currentTimeMillis();
+				//파일 형식
+				String fileFormat = storedFileName.substring(dotIndex+1);
+				//새로운 이름 
+				storedFileName = newStoredFileName+"."+fileFormat;
+			}
+			// 지정된 경로에 파일 생성
+			file = new File(path + storedFileName);
+			multipartFile.transferTo(file);
+
+			fileVO.setOriginFileName(originFileName);
+			fileVO.setStoredFileName(storedFileName);
+			fileVO.setFileSize(multipartFile.getSize());
+			list.add(fileVO);
+		}
+	}
+	return list;
+}
 </code></pre>
    
+#### 결제
+- 결제 : 결제 API 활용
+<pre><code>
+<script>
+
+IMP.init('imp46107716');
+
+IMP.request_pay({
+    pg : 'inicis', 
+    pay_method : 'card',
+    merchant_uid : 'merchant_' + new Date().getTime(),
+    name : '${pd_name}....',
+    amount : '${num}', 
+    buyer_email : 'iamport@siot.do',
+    buyer_name : '{od_name}',
+    buyer_tel : '{od_name}',
+    buyer_addr : '{od_name}',
+    buyer_postcode : '{od_name}'
+}, function(rsp) {
+    if ( rsp.success ) {
+        var msg = '결제 이동하러 가기';
+        msg += '에러 내용: ' + rsp.error_msg;
+        
+    } else {
+        var msg = "결제완료  주문페이지로 이동합니다";
+    }
+    alert(msg);
+    opener.location.href="../orders/orderlist";
+    window.close();
+});
+</script>
+</code></pre>
+   
+#### 관리자
+- 구글 차트 : 구글 차트 API 활용
+<pre><code>
+var category1=${category1};
+var category2=${category2};
+var category3=${category3};
+var category4=${category4};
+var category5=${category5};
+var totalProduct = category1+category2+category3+category4+category5;
+
+google.charts.load('current', {packages : [ 'corechart']});
+google.charts.setOnLoadCallback(drawMultSeries1);
+
+function drawMultSeries1() {
+var data1 = new google.visualization.DataTable();
+  data1.addColumn('string','카테고리');
+  data1.addColumn('number','상품 수');
+  data1.addRows([
+      ['과일',category1/totalProduct*100],
+      ['채소',category2/totalProduct*100],
+      ['정육',category3/totalProduct*100],
+      ['곡식',category4/totalProduct*100],
+      ['수산',category5/totalProduct*100]
+  ]);
+
+var options1 = {
+	chartArea : {width : '80%', height:'80%'},
+	legend:{position: 'right'},
+};
+
+var chart1 = new google.visualization.PieChart(document.getElementById('chart1'));
+chart1.draw(data1, options1);
+
+};
+</code></pre>
 #### 기타
-- 페이징 처리 : 
+- 페이징 처리 : FindCriteria, PageCriteria, PagingMaker사용하여 게시판 상품 등 페이징처리
+
 
 
 
