--- a/프로젝트 소개서.md
+++ b/프로젝트 소개서.md
@@ -1,6 +1,9 @@
 # food_market 팀 프로젝트
 - [실제 프로젝트 github 이동](https://github.com/honey-banana/food_market_my)
 - [프로젝트 호스팅 페이지 이동](http://itwillbs14.cafe24.com/food_market/)
+
+### 변경 및 수정 사항
+- 프로젝트 패키지 통합 및 변경
    
 ## 프로젝트 목표
 - Spring Framework를 기반으로한 웹 페이지 구축
@@ -20,7 +23,7 @@
 - 기타 : 페이징 처리
    
 ### 담당 파트 : 회원관리 / 관리자   
-
+   
 #### 회원관리
 - 회원가입 : ajax를 활용한 정규표현식 확인 및 중복체크, 이메일 및 다음 주소 api
   + 정규표현식
