--- a/프로젝트 소개서.md
+++ b/프로젝트 소개서.md
@@ -3,7 +3,8 @@
 - [프로젝트 호스팅 페이지 이동](http://itwillbs14.cafe24.com/food_market/)
 
 ### 변경 및 수정 사항
-- 프로젝트 패키지 통합 및 변경
+- 프로젝트 패키지 통합 및 변경 : ![image](https://user-images.githubusercontent.com/67583609/87738857-4a080a80-c819-11ea-819a-3b4919f7c41f.png)
+![image](https://user-images.githubusercontent.com/67583609/87738909-69069c80-c819-11ea-9799-2d51f2ce9219.png)
    
 ## 프로젝트 목표
 - Spring Framework를 기반으로한 웹 페이지 구축
