--- a/프로젝트 소개서.md
+++ b/프로젝트 소개서.md
@@ -3,8 +3,16 @@
 - [프로젝트 호스팅 페이지 이동](http://itwillbs14.cafe24.com/food_market/)
 
 ### 변경 및 수정 사항
-- 프로젝트 패키지 통합 및 변경 : ![image](https://user-images.githubusercontent.com/67583609/87738857-4a080a80-c819-11ea-819a-3b4919f7c41f.png)
+- 프로젝트 패키지 통합 및 변경
+![image](https://user-images.githubusercontent.com/67583609/87738857-4a080a80-c819-11ea-819a-3b4919f7c41f.png)
 ![image](https://user-images.githubusercontent.com/67583609/87738909-69069c80-c819-11ea-9799-2d51f2ce9219.png)
+- Mybatis : mybatis-config 분리 및 mapper설정 수정
+- 파일업로드 : 중복으로 구현되어있던 파일 업로드 기능 하나로 통합
+- 페이징기능 : 중복으로 구현되어있던 페이징 처리 기능 하나로 통합
+### 추가 변경 예정 사항
+- 세부 불필요한 코드 정리 및 변수명 정리
+- 관리자 페이지 : 판매자에 대한 판매권한 제어
+- Spring Security 구현
    
 ## 프로젝트 목표
 - Spring Framework를 기반으로한 웹 페이지 구축
