--- a/프로젝트 소개서.md
+++ b/프로젝트 소개서.md
@@ -11,6 +11,7 @@
 - 페이징기능 : 중복으로 구현되어있던 페이징 처리 기능 하나로 통합
 ### 추가 변경 예정 사항
 - 세부 불필요한 코드 정리 및 변수명 정리
+- 불필요하게 나눠져있는 DB 통합 및 정리
 - 관리자 페이지 : 판매자에 대한 판매권한 제어
 - Spring Security 구현
    
